Fixed horizontal scrolling caused by overflow in switcher view.

--- a/autom8_client_node/client/css/main.less
+++ b/autom8_client_node/client/css/main.less
@@ -226,6 +226,7 @@ body {
   text-shadow: 1px 1px 4px #333;
   border-bottom: 1px solid #1f1f1f;
   background-color: #444;
+  overflow: hidden;
 }
 
 .switch-devices-view.touched {
